# Automatic-papers-organizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: README.md
docs/00_project_control/: BEGINNER_START_HERE.md  CODEX_WORK_PROTOCOL.md  DEVELOPMENT_ENVIRONMENT.md  PHASE_0_BOOTSTRAP.md  PHASE_0_GOLD_SET.md  README.md
docs/01_gold_set/: ANNOTATION_GUIDE.md  README.md  annotations.template.jsonl  manifest.template.jsonl  normalization_cases.template.jsonl
scripts/: README.md
tests/: __init__.py  test_diagnostics.py
tracedoc/: __init__.py  __main__.py  cli.py  diagnostics.py
